<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~  Copyright 2023 Esri
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<resources>
    <!-- Helper text that tells the user how many characters to enter in a field
        All the quantities may not be needed for all languages -->
    <plurals name="enter_n_chars">
        <item quantity="zero">Enter %1$d character</item>
        <item quantity="one">Enter %1$d character</item>
        <item quantity="two">Enter %1$d characters</item>
        <item quantity="few">Enter %1$d characters</item>
        <item quantity="many">Enter %1$d characters</item>
        <item quantity="other">Enter %1$d characters</item>
    </plurals>
    <!-- Helper text that tells the user exactly how many characters to enter in a field
        All the quantities may not be needed for all languages -->
    <plurals name="value_must_be_n_characters">
        <item quantity="zero">Value must be %1$d character</item>
        <item quantity="one">Value must be %1$d character</item>
        <item quantity="two">Value must be %1$d characters</item>
        <item quantity="few">Value must be %1$d characters</item>
        <item quantity="many">Value must be %1$d characters</item>
        <item quantity="other">Value must be %1$d characters</item>
    </plurals>
    <!-- Helper text that tells the user the maximum number of characters allowed in a field
        All the quantities may not be needed for all languages -->
    <plurals name="maximum_n_chars">
        <item quantity="zero">Maximum %1$d character</item>
        <item quantity="one">Maximum %1$d character</item>
        <item quantity="two">Maximum %1$d characters</item>
        <item quantity="few">Maximum %1$d characters</item>
        <item quantity="many">Maximum %1$d characters</item>
        <item quantity="other">Maximum %1$d characters</item>
    </plurals>
    <!--suppress AndroidLintPluralsCandidate-->
    <string name="enter_min_to_max_chars">Enter %1$d to %2$d characters</string>
    <!--suppress AndroidLintPluralsCandidate-->
    <string name="value_must_be_from_to_characters">Value must be %1$d to %2$d characters</string>
    <!--suppress AndroidLintPluralsCandidate-->
    <string name="maximum_n_chars">Maximum %1$d characters</string>
    <string name="no_value">No value</string>
    <string name="enter_value">Enter Value</string>
    <string name="enter_a_value">Enter a Value</string>
    <string name="required">Required</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="filter">Filter %1$s</string>
    <string name="search">Search</string>
    <string name="numeric_range_helper_text">Enter value from %1$s to %2$s</string>
    <string name="value_must_be_from_to">Value must be from %1$s to %2$s</string>
    <string name="less_than_min_value">Less than minimum value %1$s</string>
    <string name="exceeds_max_value">Exceeds maximum value %1$s</string>
    <string name="value_must_be_a_whole_number">Value must be a whole number</string>
    <string name="value_must_be_a_number">Value must be a number</string>
    <string name="value_must_be_within_domain">Value must be within domain</string>
    <string name="value_must_not_be_empty">Value must not be empty</string>
    <string name="min_datetime_helper_text">Date must be on or after %1$s</string>
    <string name="max_datetime_helper_text">Date must be on or before %1$s</string>

    <!-- Date Picker string values -->

    <!-- Time Picker string values -->
    <string name="ff_time_picker_am">AM</string>
    <string name="ff_time_picker_hour">Hour</string>
    <!--suppress AndroidLintPluralsCandidate-->
    <string name="ff_time_picker_hour_24h_suffix">%1$d hours</string>
    <string name="ff_time_picker_hour_selection">Select hour</string>
    <string name="ff_time_picker_hour_suffix">%1$d o\'clock</string>
    <string name="ff_time_picker_hour_text_field">for hour</string>
    <string name="ff_time_picker_minute">Minute</string>
    <string name="ff_time_picker_minute_selection">Select minutes</string>
    <!--suppress AndroidLintPluralsCandidate-->
    <string name="ff_time_picker_minute_suffix">%1$d minutes</string>
    <string name="ff_time_picker_minute_text_field">for minutes</string>
    <string name="ff_time_picker_period_toggle_description">Select AM or PM</string>
    <string name="ff_time_picker_pm">PM</string>

    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="rename_attachment">Rename Attachment</string>
    <string name="name">Name</string>
    <string name="choose_from_files">Choose From Files</string>
    <string name="attachment_error">Error Adding Attachment</string>
    <string name="no_app_found">No application found to open this file type.</string>
    <string name="attachment_too_large">The File is too large. Please add a file less than 50 MB.</string>
    <string name="attachment_is_empty">Empty files are not supported</string>
    <string name="download_empty_file">Empty files cannot be downloaded</string>
    <string name="attachment_deleted">%1s was deleted successfully</string>
    <string name="attachment_size_limit_exceeded">Attachments larger than %1$s cannot be downloaded</string>
    <string name="barcode_tooltip">Point your camera at a barcode</string>
    <string name="barcode_permission_denied">Camera permissions are required to scan barcodes. Please enable camera permissions in your device settings.</string>
    <string name="unsupported_value">Unsupported Value</string>
    <string name="tap_to_scan">Tap to scan</string>
    <string name="unable_to_open_the_camera">Unable to open the camera</string>
    <string name="value_must_be_a_guid">Value must be a valid GUID</string>
    <string name="delete_attachment_title">Delete Attachment?</string>
    <string name="delete_attachment_confirmation">Are you sure you want to delete this attachment?</string>
    <string name="download_failed">Unable to download this file.</string>
    <string name="file_size_exceeds_limit">File Size Exceeds Limit</string>
    <string name="unsupported_file_type">Unsupported File Type</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="none_selected">None Selected</string>
    <string name="the_form_has_validation_errors">The form has validation errors</string>
    <string name="the_form_has_edits">The form has edits</string>
    <string name="do_you_want_to_save_your_changes">Do you want to save your changes?</string>
    <string name="no_associations_found">No associations to show</string>
    <string name="terminal">Terminal</string>
    <string name="terminal_with_value">Terminal : %1$s</string>
    <string name="content_visible">Content Visible</string>
    <string name="percent_along">Percent Along</string>
    <string name="from_element">From Element</string>
    <string name="to_element">To Element</string>
    <string name="association_type">Association Type</string>
    <string name="remove_association">Remove Association</string>
    <string name="remove_association_tooltip">Only removes the association. The feature remains.</string>
    <string name="remove">Remove</string>
    <string name="association_settings">Association Settings</string>
    <string name="percent_along_edge">%1$d %%</string>
    <string name="visible_content">Visible Content</string>
    <string name="content">Content</string>
    <string name="containment_visible_value">Visible: %1$s</string>
    <string name="from_network_data_source">From Network Data Source</string>
    <string name="on_map">On Map</string>
    <string name="network_data_source">Network Data Source</string>
    <string name="available_asset_types">Available Asset Types</string>
    <string name="count">Count %1$d</string>
    <string name="new_association">New Association</string>
    <string name="add">Add</string>
    <string name="failed_to_create_association">Failed to create association. %1$s</string>
    <string name="available_features">%1$d Available Features</string>
    <string name="loading2">Loading..</string>
    <plurals name="you_have_errors_that_must_be_fixed_before_saving">
        <item quantity="zero">You have %1$d errors that must be fixed before saving.</item>
        <item quantity="one">You have %1$d error that must be fixed before saving.</item>
        <item quantity="two">You have %1$d errors that must be fixed before saving</item>
        <item quantity="few">You have %1$d errors that must be fixed before saving</item>
        <item quantity="many">You have %1$d errors that must be fixed before saving</item>
        <item quantity="other">You have %1$d errors that must be fixed before saving</item>
    </plurals>
    <string name="search_features">Search features</string>
    <string name="choose_to_add">Choose to add</string>
    <string name="no_features_found">No features found</string>
    <string name="refine_your_search_tip">Refine your search or choose a different Network Source.</string>
    <string name="select_terminal">Select Terminal</string>
    <string name="show_on_map">Show on Map</string>
    <string name="more_information">More Information</string>
    <string name="add_associations">Add Associations</string>
    <string name="filter_features">Filter Features</string>
    <string name="apply">Apply</string>
    <string name="add_condition">Add Condition</string>
    <string name="no_conditions_added">No conditions added.</string>
    <string name="show_features_that_meet_all_the_conditions">Show features that meet all the conditions.</string>
    <string name="condition">Condition</string>
    <string name="condition_numbered">Condition %1$d</string>
    <string name="duplicate">Duplicate</string>
    <string name="field">Field</string>
    <string name="not_set">Not Set</string>
    <string name="value">Value</string>
    <string name="filters_not_applied">Filters have not been applied</string>
    <string name="discard_changes_confirmation">Are you sure you want to discard the changes?</string>
    <string name="record_audio">Record Audio</string>
    <string name="ready_to_record_audio">Ready to record audio.</string>
    <string name="recording_audio">Recording audio…</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="take_video">Take Video</string>
    <string name="max_attachments_limit_reached">The maximum number of attachments allowed is %1$d</string>
    <string name="media_too_long">This media is too long. Maximum allowed duration is %1$d seconds.</string>
    <string name="this_file_is_too_large">This file is too large. Maximum allowed size is %1$d MB.</string>
    <string name="attachment_with_name">Attachment: %1$s</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="there_are_validation_errors">There are validation errors</string>
    <string name="view_errors">View Errors</string>
    <string name="error_saving_edits">Error savings edits</string>
    <string name="an_error_occurred_while_saving_the_edits">An error occurred while saving the edits: %1$s</string>
    <plurals name="min_attachments_required">
        <item quantity="zero">At least %1$d attachments are required</item>
        <item quantity="one">At least %1$d attachment is required</item>
        <item quantity="two">At least %1$d attachments are required</item>
        <item quantity="few">At least %1$d attachments are required</item>
        <item quantity="many">At least %1$d attachments are required</item>
        <item quantity="other">At least %1$d attachments are required</item>
    </plurals>
    <plurals name="form_manager_has_validation_errors">
        <item quantity="zero">There are %1$d forms with validation errors. Please correct the errors before saving.</item>
        <item quantity="one">There is %1$d form with validation errors. Please correct the errors before saving.</item>
        <item quantity="two">There are %1$d forms with validation errors. Please correct the errors before saving.</item>
        <item quantity="few">There are %1$d forms with validation errors. Please correct the errors before saving.</item>
        <item quantity="many">There are %1$d forms with validation errors. Please correct the errors before saving.</item>
        <item quantity="other">There are %1$d forms with validation errors. Please correct the errors before saving.</item>
    </plurals>
</resources>
